# capp

./: .gitignore  CMakeLists.txt  README.md
android/: .gitignore  CMakeLists.txt  README.md  SETUP.md  TESTING.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts  setup-gradle.sh
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: app.lua
android/app/src/main/java/com/capp/app/: GameView.java  MainActivity.java
android/app/src/main/res/values/: strings.xml
android/src/: main_android.c  main_android_lua.c
src/: main.c  sdl2_app.c
src/lua/: app.lua  lua_compat.h  lua_sdl.c  main_embed_lua.c
src/lua/minilua/: minilua.c
src/luajit/: main.lua  sdl2.lua
